--- a/requirements.txt
+++ b/requirements.txt
@@ -16,4 +16,5 @@ prometheus_client>=0.17.0
 streamlit>=1.28.0
 psycopg2-binary>=2.9.0
 python-dotenv>=1.0.0
-cryptography>=45.0.0 
+cryptography>=45.0.0
+openpyxl>=3.0.0 
